# llm-implementation

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yaml
src/: main.c
